Proyecto/Gramatica/parser.output
Terminals unused in grammar

   tId
   tIgual


Grammar

    0 $accept: INICIO $end

    1 INICIO: LISTASENTENCIAS

    2 LISTASENTENCIAS: LISTASENTENCIAS SENTENCIA
    3                | SENTENCIA

    4 SENTENCIA: IMPRIMIR
    5          | SISINO
    6          | error tPuntocoma

    7 SISINO: tSi tPari EXPA tPard tLlavi LISTASENTENCIAS tLlavd tSino tLlavi LISTASENTENCIAS tLlavd

    8 IMPRIMIR: tImprimir tPari EXPA tPard tPuntocoma

    9 EXPA: EXPA tSuma EXPA
   10     | EXPA tMenos EXPA
   11     | EXPA tMulti EXPA
   12     | EXPA tDivision EXPA
   13     | EXPA tPotencia EXPA
   14     | EXPA tAnd EXPA
   15     | EXPA tOr EXPA
   16     | EXPA tIgualIgual EXPA
   17     | EXPA tDiferenteIgual EXPA
   18     | EXPA tMenorQue EXPA
   19     | EXPA tMayorQue EXPA
   20     | tMenos EXPA
   21     | tEntero
   22     | tCaracter
   23     | tDecimal
   24     | tBooleano
   25     | tCadena
   26     | tPari EXPA tPard


Terminals, with rules where they appear

$end (0) 0
error (256) 6
tEntero (258) 21
tDecimal (259) 23
tCaracter (260) 22
tBooleano (261) 24
tCadena (262) 25
tId (263)
tPari (264) 7 8 26
tPard (265) 7 8 26
tSuma (266) 9
tMenos (267) 10 20
tMulti (268) 11
tDivision (269) 12
tPotencia (270) 13
tPuntocoma (271) 6 8
tImprimir (272) 8
tIgual (273)
tAnd (274) 14
tOr (275) 15
tLlavi (276) 7
tLlavd (277) 7
tSi (278) 7
tSino (279) 7
tIgualIgual (280) 16
tDiferenteIgual (281) 17
tMenorQue (282) 18
tMayorQue (283) 19


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
INICIO (30)
    on left: 1, on right: 0
LISTASENTENCIAS (31)
    on left: 2 3, on right: 1 2 7
SENTENCIA (32)
    on left: 4 5 6, on right: 2 3
SISINO (33)
    on left: 7, on right: 5
IMPRIMIR (34)
    on left: 8, on right: 4
EXPA (35)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26,
    on right: 7 8 9 10 11 12 13 14 15 16 17 18 19 20 26


State 0

    0 $accept: . INICIO $end

    error      shift, and go to state 1
    tImprimir  shift, and go to state 2
    tSi        shift, and go to state 3

    INICIO           go to state 4
    LISTASENTENCIAS  go to state 5
    SENTENCIA        go to state 6
    SISINO           go to state 7
    IMPRIMIR         go to state 8


State 1

    6 SENTENCIA: error . tPuntocoma

    tPuntocoma  shift, and go to state 9


State 2

    8 IMPRIMIR: tImprimir . tPari EXPA tPard tPuntocoma

    tPari  shift, and go to state 10


State 3

    7 SISINO: tSi . tPari EXPA tPard tLlavi LISTASENTENCIAS tLlavd tSino tLlavi LISTASENTENCIAS tLlavd

    tPari  shift, and go to state 11


State 4

    0 $accept: INICIO . $end

    $end  shift, and go to state 12


State 5

    1 INICIO: LISTASENTENCIAS .
    2 LISTASENTENCIAS: LISTASENTENCIAS . SENTENCIA

    error      shift, and go to state 1
    tImprimir  shift, and go to state 2
    tSi        shift, and go to state 3

    $end  reduce using rule 1 (INICIO)

    SENTENCIA  go to state 13
    SISINO     go to state 7
    IMPRIMIR   go to state 8


State 6

    3 LISTASENTENCIAS: SENTENCIA .

    $default  reduce using rule 3 (LISTASENTENCIAS)


State 7

    5 SENTENCIA: SISINO .

    $default  reduce using rule 5 (SENTENCIA)


State 8

    4 SENTENCIA: IMPRIMIR .

    $default  reduce using rule 4 (SENTENCIA)


State 9

    6 SENTENCIA: error tPuntocoma .

    $default  reduce using rule 6 (SENTENCIA)


State 10

    8 IMPRIMIR: tImprimir tPari . EXPA tPard tPuntocoma

    tEntero    shift, and go to state 14
    tDecimal   shift, and go to state 15
    tCaracter  shift, and go to state 16
    tBooleano  shift, and go to state 17
    tCadena    shift, and go to state 18
    tPari      shift, and go to state 19
    tMenos     shift, and go to state 20

    EXPA  go to state 21


State 11

    7 SISINO: tSi tPari . EXPA tPard tLlavi LISTASENTENCIAS tLlavd tSino tLlavi LISTASENTENCIAS tLlavd

    tEntero    shift, and go to state 14
    tDecimal   shift, and go to state 15
    tCaracter  shift, and go to state 16
    tBooleano  shift, and go to state 17
    tCadena    shift, and go to state 18
    tPari      shift, and go to state 19
    tMenos     shift, and go to state 20

    EXPA  go to state 22


State 12

    0 $accept: INICIO $end .

    $default  accept


State 13

    2 LISTASENTENCIAS: LISTASENTENCIAS SENTENCIA .

    $default  reduce using rule 2 (LISTASENTENCIAS)


State 14

   21 EXPA: tEntero .

    $default  reduce using rule 21 (EXPA)


State 15

   23 EXPA: tDecimal .

    $default  reduce using rule 23 (EXPA)


State 16

   22 EXPA: tCaracter .

    $default  reduce using rule 22 (EXPA)


State 17

   24 EXPA: tBooleano .

    $default  reduce using rule 24 (EXPA)


State 18

   25 EXPA: tCadena .

    $default  reduce using rule 25 (EXPA)


State 19

   26 EXPA: tPari . EXPA tPard

    tEntero    shift, and go to state 14
    tDecimal   shift, and go to state 15
    tCaracter  shift, and go to state 16
    tBooleano  shift, and go to state 17
    tCadena    shift, and go to state 18
    tPari      shift, and go to state 19
    tMenos     shift, and go to state 20

    EXPA  go to state 23


State 20

   20 EXPA: tMenos . EXPA

    tEntero    shift, and go to state 14
    tDecimal   shift, and go to state 15
    tCaracter  shift, and go to state 16
    tBooleano  shift, and go to state 17
    tCadena    shift, and go to state 18
    tPari      shift, and go to state 19
    tMenos     shift, and go to state 20

    EXPA  go to state 24


State 21

    8 IMPRIMIR: tImprimir tPari EXPA . tPard tPuntocoma
    9 EXPA: EXPA . tSuma EXPA
   10     | EXPA . tMenos EXPA
   11     | EXPA . tMulti EXPA
   12     | EXPA . tDivision EXPA
   13     | EXPA . tPotencia EXPA
   14     | EXPA . tAnd EXPA
   15     | EXPA . tOr EXPA
   16     | EXPA . tIgualIgual EXPA
   17     | EXPA . tDiferenteIgual EXPA
   18     | EXPA . tMenorQue EXPA
   19     | EXPA . tMayorQue EXPA

    tPard            shift, and go to state 25
    tSuma            shift, and go to state 26
    tMenos           shift, and go to state 27
    tMulti           shift, and go to state 28
    tDivision        shift, and go to state 29
    tPotencia        shift, and go to state 30
    tAnd             shift, and go to state 31
    tOr              shift, and go to state 32
    tIgualIgual      shift, and go to state 33
    tDiferenteIgual  shift, and go to state 34
    tMenorQue        shift, and go to state 35
    tMayorQue        shift, and go to state 36


State 22

    7 SISINO: tSi tPari EXPA . tPard tLlavi LISTASENTENCIAS tLlavd tSino tLlavi LISTASENTENCIAS tLlavd
    9 EXPA: EXPA . tSuma EXPA
   10     | EXPA . tMenos EXPA
   11     | EXPA . tMulti EXPA
   12     | EXPA . tDivision EXPA
   13     | EXPA . tPotencia EXPA
   14     | EXPA . tAnd EXPA
   15     | EXPA . tOr EXPA
   16     | EXPA . tIgualIgual EXPA
   17     | EXPA . tDiferenteIgual EXPA
   18     | EXPA . tMenorQue EXPA
   19     | EXPA . tMayorQue EXPA

    tPard            shift, and go to state 37
    tSuma            shift, and go to state 26
    tMenos           shift, and go to state 27
    tMulti           shift, and go to state 28
    tDivision        shift, and go to state 29
    tPotencia        shift, and go to state 30
    tAnd             shift, and go to state 31
    tOr              shift, and go to state 32
    tIgualIgual      shift, and go to state 33
    tDiferenteIgual  shift, and go to state 34
    tMenorQue        shift, and go to state 35
    tMayorQue        shift, and go to state 36


State 23

    9 EXPA: EXPA . tSuma EXPA
   10     | EXPA . tMenos EXPA
   11     | EXPA . tMulti EXPA
   12     | EXPA . tDivision EXPA
   13     | EXPA . tPotencia EXPA
   14     | EXPA . tAnd EXPA
   15     | EXPA . tOr EXPA
   16     | EXPA . tIgualIgual EXPA
   17     | EXPA . tDiferenteIgual EXPA
   18     | EXPA . tMenorQue EXPA
   19     | EXPA . tMayorQue EXPA
   26     | tPari EXPA . tPard

    tPard            shift, and go to state 38
    tSuma            shift, and go to state 26
    tMenos           shift, and go to state 27
    tMulti           shift, and go to state 28
    tDivision        shift, and go to state 29
    tPotencia        shift, and go to state 30
    tAnd             shift, and go to state 31
    tOr              shift, and go to state 32
    tIgualIgual      shift, and go to state 33
    tDiferenteIgual  shift, and go to state 34
    tMenorQue        shift, and go to state 35
    tMayorQue        shift, and go to state 36


State 24

    9 EXPA: EXPA . tSuma EXPA
   10     | EXPA . tMenos EXPA
   11     | EXPA . tMulti EXPA
   12     | EXPA . tDivision EXPA
   13     | EXPA . tPotencia EXPA
   14     | EXPA . tAnd EXPA
   15     | EXPA . tOr EXPA
   16     | EXPA . tIgualIgual EXPA
   17     | EXPA . tDiferenteIgual EXPA
   18     | EXPA . tMenorQue EXPA
   19     | EXPA . tMayorQue EXPA
   20     | tMenos EXPA .

    tMulti     shift, and go to state 28
    tDivision  shift, and go to state 29
    tPotencia  shift, and go to state 30

    $default  reduce using rule 20 (EXPA)


State 25

    8 IMPRIMIR: tImprimir tPari EXPA tPard . tPuntocoma

    tPuntocoma  shift, and go to state 39


State 26

    9 EXPA: EXPA tSuma . EXPA

    tEntero    shift, and go to state 14
    tDecimal   shift, and go to state 15
    tCaracter  shift, and go to state 16
    tBooleano  shift, and go to state 17
    tCadena    shift, and go to state 18
    tPari      shift, and go to state 19
    tMenos     shift, and go to state 20

    EXPA  go to state 40


State 27

   10 EXPA: EXPA tMenos . EXPA

    tEntero    shift, and go to state 14
    tDecimal   shift, and go to state 15
    tCaracter  shift, and go to state 16
    tBooleano  shift, and go to state 17
    tCadena    shift, and go to state 18
    tPari      shift, and go to state 19
    tMenos     shift, and go to state 20

    EXPA  go to state 41


State 28

   11 EXPA: EXPA tMulti . EXPA

    tEntero    shift, and go to state 14
    tDecimal   shift, and go to state 15
    tCaracter  shift, and go to state 16
    tBooleano  shift, and go to state 17
    tCadena    shift, and go to state 18
    tPari      shift, and go to state 19
    tMenos     shift, and go to state 20

    EXPA  go to state 42


State 29

   12 EXPA: EXPA tDivision . EXPA

    tEntero    shift, and go to state 14
    tDecimal   shift, and go to state 15
    tCaracter  shift, and go to state 16
    tBooleano  shift, and go to state 17
    tCadena    shift, and go to state 18
    tPari      shift, and go to state 19
    tMenos     shift, and go to state 20

    EXPA  go to state 43


State 30

   13 EXPA: EXPA tPotencia . EXPA

    tEntero    shift, and go to state 14
    tDecimal   shift, and go to state 15
    tCaracter  shift, and go to state 16
    tBooleano  shift, and go to state 17
    tCadena    shift, and go to state 18
    tPari      shift, and go to state 19
    tMenos     shift, and go to state 20

    EXPA  go to state 44


State 31

   14 EXPA: EXPA tAnd . EXPA

    tEntero    shift, and go to state 14
    tDecimal   shift, and go to state 15
    tCaracter  shift, and go to state 16
    tBooleano  shift, and go to state 17
    tCadena    shift, and go to state 18
    tPari      shift, and go to state 19
    tMenos     shift, and go to state 20

    EXPA  go to state 45


State 32

   15 EXPA: EXPA tOr . EXPA

    tEntero    shift, and go to state 14
    tDecimal   shift, and go to state 15
    tCaracter  shift, and go to state 16
    tBooleano  shift, and go to state 17
    tCadena    shift, and go to state 18
    tPari      shift, and go to state 19
    tMenos     shift, and go to state 20

    EXPA  go to state 46


State 33

   16 EXPA: EXPA tIgualIgual . EXPA

    tEntero    shift, and go to state 14
    tDecimal   shift, and go to state 15
    tCaracter  shift, and go to state 16
    tBooleano  shift, and go to state 17
    tCadena    shift, and go to state 18
    tPari      shift, and go to state 19
    tMenos     shift, and go to state 20

    EXPA  go to state 47


State 34

   17 EXPA: EXPA tDiferenteIgual . EXPA

    tEntero    shift, and go to state 14
    tDecimal   shift, and go to state 15
    tCaracter  shift, and go to state 16
    tBooleano  shift, and go to state 17
    tCadena    shift, and go to state 18
    tPari      shift, and go to state 19
    tMenos     shift, and go to state 20

    EXPA  go to state 48


State 35

   18 EXPA: EXPA tMenorQue . EXPA

    tEntero    shift, and go to state 14
    tDecimal   shift, and go to state 15
    tCaracter  shift, and go to state 16
    tBooleano  shift, and go to state 17
    tCadena    shift, and go to state 18
    tPari      shift, and go to state 19
    tMenos     shift, and go to state 20

    EXPA  go to state 49


State 36

   19 EXPA: EXPA tMayorQue . EXPA

    tEntero    shift, and go to state 14
    tDecimal   shift, and go to state 15
    tCaracter  shift, and go to state 16
    tBooleano  shift, and go to state 17
    tCadena    shift, and go to state 18
    tPari      shift, and go to state 19
    tMenos     shift, and go to state 20

    EXPA  go to state 50


State 37

    7 SISINO: tSi tPari EXPA tPard . tLlavi LISTASENTENCIAS tLlavd tSino tLlavi LISTASENTENCIAS tLlavd

    tLlavi  shift, and go to state 51


State 38

   26 EXPA: tPari EXPA tPard .

    $default  reduce using rule 26 (EXPA)


State 39

    8 IMPRIMIR: tImprimir tPari EXPA tPard tPuntocoma .

    $default  reduce using rule 8 (IMPRIMIR)


State 40

    9 EXPA: EXPA . tSuma EXPA
    9     | EXPA tSuma EXPA .
   10     | EXPA . tMenos EXPA
   11     | EXPA . tMulti EXPA
   12     | EXPA . tDivision EXPA
   13     | EXPA . tPotencia EXPA
   14     | EXPA . tAnd EXPA
   15     | EXPA . tOr EXPA
   16     | EXPA . tIgualIgual EXPA
   17     | EXPA . tDiferenteIgual EXPA
   18     | EXPA . tMenorQue EXPA
   19     | EXPA . tMayorQue EXPA

    tMulti     shift, and go to state 28
    tDivision  shift, and go to state 29
    tPotencia  shift, and go to state 30

    $default  reduce using rule 9 (EXPA)


State 41

    9 EXPA: EXPA . tSuma EXPA
   10     | EXPA . tMenos EXPA
   10     | EXPA tMenos EXPA .
   11     | EXPA . tMulti EXPA
   12     | EXPA . tDivision EXPA
   13     | EXPA . tPotencia EXPA
   14     | EXPA . tAnd EXPA
   15     | EXPA . tOr EXPA
   16     | EXPA . tIgualIgual EXPA
   17     | EXPA . tDiferenteIgual EXPA
   18     | EXPA . tMenorQue EXPA
   19     | EXPA . tMayorQue EXPA

    tMulti     shift, and go to state 28
    tDivision  shift, and go to state 29
    tPotencia  shift, and go to state 30

    $default  reduce using rule 10 (EXPA)


State 42

    9 EXPA: EXPA . tSuma EXPA
   10     | EXPA . tMenos EXPA
   11     | EXPA . tMulti EXPA
   11     | EXPA tMulti EXPA .
   12     | EXPA . tDivision EXPA
   13     | EXPA . tPotencia EXPA
   14     | EXPA . tAnd EXPA
   15     | EXPA . tOr EXPA
   16     | EXPA . tIgualIgual EXPA
   17     | EXPA . tDiferenteIgual EXPA
   18     | EXPA . tMenorQue EXPA
   19     | EXPA . tMayorQue EXPA

    tPotencia  shift, and go to state 30

    $default  reduce using rule 11 (EXPA)


State 43

    9 EXPA: EXPA . tSuma EXPA
   10     | EXPA . tMenos EXPA
   11     | EXPA . tMulti EXPA
   12     | EXPA . tDivision EXPA
   12     | EXPA tDivision EXPA .
   13     | EXPA . tPotencia EXPA
   14     | EXPA . tAnd EXPA
   15     | EXPA . tOr EXPA
   16     | EXPA . tIgualIgual EXPA
   17     | EXPA . tDiferenteIgual EXPA
   18     | EXPA . tMenorQue EXPA
   19     | EXPA . tMayorQue EXPA

    tPotencia  shift, and go to state 30

    $default  reduce using rule 12 (EXPA)


State 44

    9 EXPA: EXPA . tSuma EXPA
   10     | EXPA . tMenos EXPA
   11     | EXPA . tMulti EXPA
   12     | EXPA . tDivision EXPA
   13     | EXPA . tPotencia EXPA
   13     | EXPA tPotencia EXPA .
   14     | EXPA . tAnd EXPA
   15     | EXPA . tOr EXPA
   16     | EXPA . tIgualIgual EXPA
   17     | EXPA . tDiferenteIgual EXPA
   18     | EXPA . tMenorQue EXPA
   19     | EXPA . tMayorQue EXPA

    $default  reduce using rule 13 (EXPA)


State 45

    9 EXPA: EXPA . tSuma EXPA
   10     | EXPA . tMenos EXPA
   11     | EXPA . tMulti EXPA
   12     | EXPA . tDivision EXPA
   13     | EXPA . tPotencia EXPA
   14     | EXPA . tAnd EXPA
   14     | EXPA tAnd EXPA .
   15     | EXPA . tOr EXPA
   16     | EXPA . tIgualIgual EXPA
   17     | EXPA . tDiferenteIgual EXPA
   18     | EXPA . tMenorQue EXPA
   19     | EXPA . tMayorQue EXPA

    tSuma            shift, and go to state 26
    tMenos           shift, and go to state 27
    tMulti           shift, and go to state 28
    tDivision        shift, and go to state 29
    tPotencia        shift, and go to state 30
    tIgualIgual      shift, and go to state 33
    tDiferenteIgual  shift, and go to state 34
    tMenorQue        shift, and go to state 35
    tMayorQue        shift, and go to state 36

    $default  reduce using rule 14 (EXPA)


State 46

    9 EXPA: EXPA . tSuma EXPA
   10     | EXPA . tMenos EXPA
   11     | EXPA . tMulti EXPA
   12     | EXPA . tDivision EXPA
   13     | EXPA . tPotencia EXPA
   14     | EXPA . tAnd EXPA
   15     | EXPA . tOr EXPA
   15     | EXPA tOr EXPA .
   16     | EXPA . tIgualIgual EXPA
   17     | EXPA . tDiferenteIgual EXPA
   18     | EXPA . tMenorQue EXPA
   19     | EXPA . tMayorQue EXPA

    tSuma            shift, and go to state 26
    tMenos           shift, and go to state 27
    tMulti           shift, and go to state 28
    tDivision        shift, and go to state 29
    tPotencia        shift, and go to state 30
    tAnd             shift, and go to state 31
    tIgualIgual      shift, and go to state 33
    tDiferenteIgual  shift, and go to state 34
    tMenorQue        shift, and go to state 35
    tMayorQue        shift, and go to state 36

    $default  reduce using rule 15 (EXPA)


State 47

    9 EXPA: EXPA . tSuma EXPA
   10     | EXPA . tMenos EXPA
   11     | EXPA . tMulti EXPA
   12     | EXPA . tDivision EXPA
   13     | EXPA . tPotencia EXPA
   14     | EXPA . tAnd EXPA
   15     | EXPA . tOr EXPA
   16     | EXPA . tIgualIgual EXPA
   16     | EXPA tIgualIgual EXPA .
   17     | EXPA . tDiferenteIgual EXPA
   18     | EXPA . tMenorQue EXPA
   19     | EXPA . tMayorQue EXPA

    tSuma      shift, and go to state 26
    tMenos     shift, and go to state 27
    tMulti     shift, and go to state 28
    tDivision  shift, and go to state 29
    tPotencia  shift, and go to state 30

    $default  reduce using rule 16 (EXPA)


State 48

    9 EXPA: EXPA . tSuma EXPA
   10     | EXPA . tMenos EXPA
   11     | EXPA . tMulti EXPA
   12     | EXPA . tDivision EXPA
   13     | EXPA . tPotencia EXPA
   14     | EXPA . tAnd EXPA
   15     | EXPA . tOr EXPA
   16     | EXPA . tIgualIgual EXPA
   17     | EXPA . tDiferenteIgual EXPA
   17     | EXPA tDiferenteIgual EXPA .
   18     | EXPA . tMenorQue EXPA
   19     | EXPA . tMayorQue EXPA

    tSuma      shift, and go to state 26
    tMenos     shift, and go to state 27
    tMulti     shift, and go to state 28
    tDivision  shift, and go to state 29
    tPotencia  shift, and go to state 30

    $default  reduce using rule 17 (EXPA)


State 49

    9 EXPA: EXPA . tSuma EXPA
   10     | EXPA . tMenos EXPA
   11     | EXPA . tMulti EXPA
   12     | EXPA . tDivision EXPA
   13     | EXPA . tPotencia EXPA
   14     | EXPA . tAnd EXPA
   15     | EXPA . tOr EXPA
   16     | EXPA . tIgualIgual EXPA
   17     | EXPA . tDiferenteIgual EXPA
   18     | EXPA . tMenorQue EXPA
   18     | EXPA tMenorQue EXPA .
   19     | EXPA . tMayorQue EXPA

    tSuma      shift, and go to state 26
    tMenos     shift, and go to state 27
    tMulti     shift, and go to state 28
    tDivision  shift, and go to state 29
    tPotencia  shift, and go to state 30

    $default  reduce using rule 18 (EXPA)


State 50

    9 EXPA: EXPA . tSuma EXPA
   10     | EXPA . tMenos EXPA
   11     | EXPA . tMulti EXPA
   12     | EXPA . tDivision EXPA
   13     | EXPA . tPotencia EXPA
   14     | EXPA . tAnd EXPA
   15     | EXPA . tOr EXPA
   16     | EXPA . tIgualIgual EXPA
   17     | EXPA . tDiferenteIgual EXPA
   18     | EXPA . tMenorQue EXPA
   19     | EXPA . tMayorQue EXPA
   19     | EXPA tMayorQue EXPA .

    tSuma      shift, and go to state 26
    tMenos     shift, and go to state 27
    tMulti     shift, and go to state 28
    tDivision  shift, and go to state 29
    tPotencia  shift, and go to state 30

    $default  reduce using rule 19 (EXPA)


State 51

    7 SISINO: tSi tPari EXPA tPard tLlavi . LISTASENTENCIAS tLlavd tSino tLlavi LISTASENTENCIAS tLlavd

    error      shift, and go to state 1
    tImprimir  shift, and go to state 2
    tSi        shift, and go to state 3

    LISTASENTENCIAS  go to state 52
    SENTENCIA        go to state 6
    SISINO           go to state 7
    IMPRIMIR         go to state 8


State 52

    2 LISTASENTENCIAS: LISTASENTENCIAS . SENTENCIA
    7 SISINO: tSi tPari EXPA tPard tLlavi LISTASENTENCIAS . tLlavd tSino tLlavi LISTASENTENCIAS tLlavd

    error      shift, and go to state 1
    tImprimir  shift, and go to state 2
    tLlavd     shift, and go to state 53
    tSi        shift, and go to state 3

    SENTENCIA  go to state 13
    SISINO     go to state 7
    IMPRIMIR   go to state 8


State 53

    7 SISINO: tSi tPari EXPA tPard tLlavi LISTASENTENCIAS tLlavd . tSino tLlavi LISTASENTENCIAS tLlavd

    tSino  shift, and go to state 54


State 54

    7 SISINO: tSi tPari EXPA tPard tLlavi LISTASENTENCIAS tLlavd tSino . tLlavi LISTASENTENCIAS tLlavd

    tLlavi  shift, and go to state 55


State 55

    7 SISINO: tSi tPari EXPA tPard tLlavi LISTASENTENCIAS tLlavd tSino tLlavi . LISTASENTENCIAS tLlavd

    error      shift, and go to state 1
    tImprimir  shift, and go to state 2
    tSi        shift, and go to state 3

    LISTASENTENCIAS  go to state 56
    SENTENCIA        go to state 6
    SISINO           go to state 7
    IMPRIMIR         go to state 8


State 56

    2 LISTASENTENCIAS: LISTASENTENCIAS . SENTENCIA
    7 SISINO: tSi tPari EXPA tPard tLlavi LISTASENTENCIAS tLlavd tSino tLlavi LISTASENTENCIAS . tLlavd

    error      shift, and go to state 1
    tImprimir  shift, and go to state 2
    tLlavd     shift, and go to state 57
    tSi        shift, and go to state 3

    SENTENCIA  go to state 13
    SISINO     go to state 7
    IMPRIMIR   go to state 8


State 57

    7 SISINO: tSi tPari EXPA tPard tLlavi LISTASENTENCIAS tLlavd tSino tLlavi LISTASENTENCIAS tLlavd .

    $default  reduce using rule 7 (SISINO)
